# AnchorBridge

./: .env.example  .gitignore  .vercelignore  README.md  analytics-report.md  feedback-summary.md  index.html  monitoring-report.md  package-lock.json  package.json  structure.txt  test_prepare.js  test_rpc.js  test_scval.js  user-onboarding-report.md  vite.config.ts
.github/workflows/: contract.yml  frontend.yml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: admin.rs  auth.rs  errors.rs  escrow.rs  events.rs  integration_test.rs  lib.rs  migration.rs  milestone.rs  payment.rs  project.rs  reputation.rs  storage.rs  test.rs  types.rs  utils.rs
contracts/escrow/test_snapshots/integration_test/: test_multiple_projects_integration.1.json
contracts/escrow/test_snapshots/test/: test_cancel_project.1.json  test_create_milestone_unauthorized.1.json  test_create_project_and_fund.1.json  test_create_project_auth_failure.1.json  test_dispute_milestone.1.json  test_duplicate_project_creation.1.json  test_invalid_milestone_count.1.json  test_milestone_invalid_index.1.json  test_milestone_workflow.1.json  test_missing_initialization.1.json  test_refund_client.1.json
docs/: DEMO_VIDEO.md  LEVEL4_READINESS.md  README_ASSETS.md  SCREENSHOTS.md  SUBMISSION_CHECKLIST.md  demo_guide.md
scripts/: deploy.ps1  deploy.sh  initialize.ps1  initialize.sh  test_e2e.js
src/: App.tsx  index.css
src/components/: Layout.tsx  Logo.tsx  Navbar.tsx  Onboarding.tsx  Sidebar.tsx
src/config/: contracts.ts
src/pages/: ActivityFeed.tsx  CreateProject.tsx  Dashboard.tsx  Feedback.tsx  (+12 more)
(+10 files in other folders)
