[package]
name = "anchorbridge_escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "25.2.0"

[dev-dependencies]
soroban-sdk = { version = "25.2.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
